main.css
body {
    margin: 0;
    padding: 0;
    font-family: 'DM Sans', sans-serif;
    text-align: center
}

* {
    box-sizing: border-box;
}

a {
    text-decoration: none;
    color: black;      
}

/* logo */
nav header h1 {
    color: #13D1FC;
    margin-top: 10px;
    margin-bottom: 0;
    margin-left: 10px;
    font-size: 20px;
    font-weight: 400;
    text-align: left
}

nav header span h1 {
    margin-top: -5px;
    font-weight: 700;
}

.hacker {
    letter-spacing: 2px;
}

/* mobile nav */
.coffee-menu, .arrow-close {
    position: absolute;
    right: 20px;
    top: 20px;
    color: #EC4D3C;
    z-index: 2;
    font-size: 24px;
    cursor: pointer;
}

.open-nav {
    width: 280px;
    height: 280px;
    position: absolute;
    top: 0;
    right: 0;
    padding-top: 80px;
    z-index: 1;
    background-color: #13D1FC;
    border-bottom-left-radius: 100%;
    color: white;
    text-align: left
}

.open-nav button {
    border: none;
    background: none;
	color: inherit;
	font: inherit;
	outline: inherit;
    font-size: 18px;
    line-height: 40px;
    font-weight: 700;
    word-spacing: 5px;
    cursor: pointer;
    padding-left: 80px
}

.open-nav button span {
    font-weight: 400
}

/* hero-image */
.background-image {
    width: 100%;
    opacity: 0.5;
}

/* headline */
.headline {
    position: absolute;
    top: 20%;
    left: 0;
    right: 0;
    text-align: center;
    font-size: 24px;
    font-weight: 700;
}

/* sub-headline */
main h3 {
    font-size: 16px;
    margin: 0 15px;
    color: #6680D2;
    text-align: center
}

/* form */
form {
    padding-top: 30px;
    width: 360px;
    margin-left: auto;
    margin-right: auto;
    text-align: center
}

.search-input {
    width: 70%;
    border: none;
    color: #5A6B97;
    border-bottom-style: solid;
    border-bottom-width: 0.5px;
    height: 30px;
    font-family: 'DM Sans', sans-serif;
    font-size: 20px;
    font-weight: 700
}

.search-input::placeholder {
    font-size: 24px;
    font-weight: 700;
    color: #C4D5ED;
    opacity: 0.5;
}

.submit-button {
    background-color: transparent;
    border: 1.5px solid #13D1FC;
    font-family: 'DM Sans', sans-serif;
    font-size: 16px;
    padding: 5px 10px;
    color: #13D1FC;
    border-radius: 10px;
    cursor: pointer;
}

.slider {
    display: block;
    margin-left: auto;
    margin-right: auto;
    margin-top: 30px;
    width: 90%; 
    height: 15px; 
    -webkit-appearance: none; 
    appearance: none;
    background: #C4D5ED; 
    opacity: 0.7; 
    border-radius: 10px;
    -webkit-transition: .2s;
    transition: opacity .2s;
}

.slider:hover {
    opacity: 1; 
}
  
.slider::-webkit-slider-thumb {
    -webkit-appearance: none; 
    appearance: none;
    width: 30px; 
    height: 30px; 
    background-image: url(images/map-pinpoint.png);
    background-size: cover;
    cursor: pointer; 
    margin-bottom: 25px
}
  
.slider::-moz-range-thumb {
    width: 30px; 
    height: 30px; 
    background-image: url(images/map-pinpoint.png);
    background-size: cover;
    cursor: pointer; 
}

/* section headings */
main h4 {
    font-size: 22px;
    color: white;
    padding-left: 15px;
    padding-top: 30px;
    text-align: left
}

/* section background */
.background-purple {
    background-color: #6680D2;
    margin-top: 50px;
    padding-bottom: 50px;
}

/* whats-hackathon section */
.whats-hackathon {
    margin: 50px 0;
    display: flex;
    flex-wrap: nowrap;
    flex-direction: column;
    justify-content: center;
    align-items: center
}

.span-heading {
    color: #543E63;
    margin-bottom: 20px;
    font-weight: 700;
    word-spacing: 5px
}

.span-heading span {
    font-weight: 400
}

.whats-hackathon-img {
    width: 80%;
}

.whats-hackathon-desc {
    margin: 0 30px;
    color: #A1667D;
    text-align: left
}

.learn {
    color: white;
    padding-top: 30px
}


/* search results style */
.card {
    background-color: white;
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
    transition: 0.3s;
    width: 340px;
    height: 500px;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 20px;
    color :#5A6B97;
    padding-bottom: 10px;
    border-radius: 10px;
    text-align: left;
}

.card i {
    color: #13D1FC;
    float: left;
    padding-right: 10px;
    font-size: 22px;
}

.card h5 {
    color: black;
    padding: 5px;
}
  
.card:hover {
    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
}

.inner-container {
    margin-top: 30px
}
  
.container {
    padding: 5px 20px;
}

.card img {
    border-top-left-radius: inherit;
    border-top-right-radius: inherit;
    height: 200px;
    max-width: 100%;
    display: block;
    margin-left: auto;
    margin-right: auto
}

/* footer */
footer {
    color: white;
    background-color: #6680D2;
    padding: 5px
}

/* scroll-to-the-top */
#scroll-to-top {
    display: none;
    position: fixed;
    bottom: 20px;
    right: 20px;
    z-index: 99;
    font-size: 18px;
    border: none;
    outline: none;
    background-color: #13D1FC;
    color: white;
    cursor: pointer;
    padding: 15px 17px;
    border-radius: 30px;
}
  
#scroll-to-top:hover {
    background-color: #00ccfa;
}

/* unabled-location */
.unabled-location {
    margin-top: 40px;
    color :#5A6B97;
    padding: 0 30px
}

.unabled-location h5 {
    margin-top: 10px
}

/* responsive */
@media screen and (min-width: 450px) {

    .headline {
        top: 25%;
    }

    .player {
        margin: 20px;
    }

    .players {
        display: flex;
        flex-wrap: wrap;
        flex-direction: row;
        justify-content: center
    }
}

@media screen and (min-width: 550px) {

    main h4, .learn {
        padding-top: 50px;
        font-size: 26px;
    }

    .headline h1 {
        font-size: 34px;
        line-height: 40px;
    }

    main h3 {
        font-size: 20px;
    }

    .card {
        margin-top: 50px
    }
}

@media screen and (min-width: 600px) {

    .headline h1 {
        font-size: 50px;
        line-height: 55px
    }

    .headline {
        top: 20%;
    }

    .background-image {
        width: 90%;
    }

    form {
        width: 500px;
    }

    .slider {
        width: 80%;
    }

    .whats-hackathon-img {
        width: 80%;
    }
}

@media screen and (min-width: 700px) {

    .background-image {
        width: 80%;
    }

    main h4, .learn {
        font-size: 32px;
    } 

    .whats-hackathon-desc {
        margin: 0 50px
    }
}

@media screen and (min-width: 750px) {

    .hero {
        display: flex;
        flex-wrap: nowrap;
        flex-direction: row;
        justify-content: center;
        align-items: flex-end
    }

    .background-image {        
        opacity: 1;
        width: 50%
    }

    .headline {
        position: static;
        width: 50%;
        text-align: left
    }

    main h3 {
        padding-top: 30px
    }

    .whats-hackathon {
        flex-wrap: nowrap;
        flex-direction: row;
    }

    .whats-hackathon-img {
        width: 50%;
        height: 50%;
    }

    .whats-hackathon-copy {
        width: 50%;
    }
}

@media screen and (min-width: 800px) {

    .upcoming h4 {
        margin-bottom: 40px
    }

    .learn-how h4 {
        margin-bottom: 30px
    }

    .card {
        width: 320px;
        margin: 10px
    }

    .event-results {
        display: flex;
        flex-wrap: wrap;
        justify-content: space-evenly;
        margin-left: 50px;
        margin-right: 50px
    }

    @supports (-ms-ime-align: auto) {
        .event-results {
            display: grid;
            grid-template-columns: auto auto auto auto;;
        }
    }

    main h3 {
        padding-top: 20px;
    }

    main h4 {
        margin: 0 30px
    }

    .whats-hackathon {
        margin-top: 50px
    }
}

@media screen and (min-width: 900px) {

    form {
        width: 600px;
        margin-top: 20px
    }

    main h4, .learn {
        font-size: 36px
    }
}

@media screen and (min-width: 1000px) {

    .background-image, .headline {
        width: 40%
    }

    .player {
        width: 460px;
        height: 258px;
    }

    .span-heading {
        padding-top: 0
    }

    .whats-hackathon-img {
        width: 40%;
        height: 40%;
    }

    #scroll-to-top {
        font-size: 24px;
        padding: 15px 18px
    }
}

@media screen and (min-width: 1100px) {

    .headline h1 {
        font-size: 56px;
        line-height: 58px
    }

    main h3 {
        font-size: 24px
    }

    .coffee-menu, .arrow-close {
        font-size: 30px
    }

    form {
        width: 800px;
        padding-top: 50px
    }

    .search-input::placeholder {
        font-size: 34px
    }
    
    .submit-button {
        font-size: 20px;
        padding: 10px 15px;
    }

    .search-input {
        height: 40px;
        font-size: 34px;
        padding-bottom: 10px
    }

    .slider {
        width: 70%
    }

   
    nav header h1 {
        margin-left: 30px;
    }
    
}

@media screen and (min-width: 1200px) {

    .headline h1 {
        font-size: 60px;
        line-height: 65px
    }

    main h3 {
        padding-top: 0;
    }

    form {
        margin-top: 0
    }

    .coffee-menu, .arrow-close {
        right: 30px;
        top: 30px
    }  

}

@media screen and (min-width: 1300px) {

    .background-image, .headline, .whats-hackathon-img {
        width: 35%
    }

    .player {
        width: 680px;
        height: 382px;
    }

    .whats-hackathon-desc {
        font-size: 18px
    }
}

